# arcface

./: hello  hello.cpp  releasenotes.txt
samplecode/ASFTestDemo/: CMakeLists.txt  face_compare  face_compare.cpp  face_reg  face_reg.cpp  samplecode  samplecode.cpp
samplecode/ASFTestDemo/files/: path1_result.txt  results1.txt  results_0_1000000.txt  results_10000000_11000000.txt  results_1000000_2000000.txt  results_11000000_12000000.txt  results_12000000_13000000.txt  results_13000000_14000000.txt  results_14000000_15000000.txt  results_15000000_15918012.txt  results_2000000_3000000.txt  results_3000000_4000000.txt  results_4000000_5000000.txt  results_5000000_6000000.txt  results_6000000_7000000.txt  results_7000000_8000000.txt  results_8000000_9000000.txt  results_9000000_10000000.txt
